--- a/ParadojasEstadísticas.ipynb
+++ b/ParadojasEstadísticas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPxw/o92IjMobAeRiulntux",
+      "authorship_tag": "ABX9TyMAZXs1DX13JSAys2XgYqiT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,8 @@
       "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "T11QVggTuT-t",
         "outputId": "ee33d3b0-ff78-4966-eb66-45af64c68267"
@@ -142,7 +143,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "LGlR51Z1x5Rt",
         "outputId": "f95250fb-c8b4-447d-ab8e-5116ef1767b9"
@@ -208,7 +210,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "XZT1-qgVzc2W",
         "outputId": "c259562b-fed2-4162-be8f-353110dd690e"
@@ -337,7 +340,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "g27ZTCoN0itE",
         "outputId": "c4173474-7408-419b-d8fe-2945a4bce2e5"
@@ -432,7 +436,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "RFH5TYIG2D_3",
         "outputId": "58d3090f-e703-4189-8b64-7e6d04190cb4"
@@ -467,7 +472,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "vYW9ZHlx2L8z",
         "outputId": "cf8773b7-c347-49ef-bc3a-de69d94b6e7f"
@@ -534,7 +540,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ZTtbdtrW25uv",
         "outputId": "c802d642-81ee-4f7f-8170-e196ae55cc5e"
@@ -570,7 +577,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4mNJp1_Q3Uh7",
         "outputId": "269fd951-6a68-4dc8-dfe1-1415aa319c74"
@@ -606,7 +614,7 @@
         "\n",
         "En conclusión, comprender las _paradojas estadísticas es crucial para los científicos de datos_, ya que pueden ayudar a evitar **errores** y **sesgos** comunes en el **análisis de datos**.\n",
         "\n",
-        "* **La paradoja de la precisión** nos enseña que la precisión por sí sola no es suficiente para evaluar las tareas de clasificación, y la precisión y el recuerdo son más informativos.\n",
+        "* **La paradoja de la Accuracy** nos enseña que la Accuracy por sí sola no es suficiente para evaluar las tareas de clasificación, y la Precisión y el Recall son más informativos.\n",
         "\n",
         "* **La paradoja de los falsos positivos** destaca la importancia de comprender el costo de los falsos positivos en relación con el costo de los falsos negativos.\n",
         "\n",
