--- a/EnfoqueAlgorítmicoVersusEnfoqueEstadístico.ipynb
+++ b/EnfoqueAlgorítmicoVersusEnfoqueEstadístico.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtRWhlOjD8ffddUWs+orTe",
+      "authorship_tag": "ABX9TyOujNo7iqsGcEFnGAXcKGkX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -270,7 +270,9 @@
       "cell_type": "markdown",
       "source": [
         "### **1**. Realice un análisis exploratorio del set de datos.\n",
-        "¿Algún insight?"
+        "¿Algún insight?\n",
+        "\n",
+        "*R.-* La gente que estudia más hora, obtiene una calificación mejor."
       ],
       "metadata": {
         "id": "504INjAyuGN4"
