--- a/KNN_CasoMailSpam_DarwinJoanPerezAvendano.ipynb
+++ b/KNN_CasoMailSpam_DarwinJoanPerezAvendano.ipynb
@@ -1058,7 +1058,7 @@
         "id": "FiGZU3pMn1I-"
       },
       "source": [
-        "### Entrenamiento con el valor de K seleccionado"
+        "### Entrenamiento con el valor de K seleccionado = 7."
       ]
     },
     {
@@ -1119,7 +1119,7 @@
         "id": "m5WfxD5Dn1I-"
       },
       "source": [
-        "### Métricas con el valor de K seleccionado"
+        "### Métricas con el valor de K seleccionado = **7**."
       ]
     },
     {
